--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
           <div class="elements">
             <div class="text-data">
               <h1>content</h1>
-              <div class="phone">
+              <div class="phone-footer">
                 <i class="fa-solid fa-phone"></i>
                 020 1550491700
               </div>
-              <div class="website">
+              <div class="website-footer">
                 <i class="fa-solid fa-globe"></i>
                 https//www.google.com
               </div>
-              <div class="email">
+              <div class="email-footer">
                 <i class="fa-regular fa-envelope"></i>
                 <span>mohamedadeel939@gmail.com</span>
               </div>
-              <div class="adress">
+              <div class="adress-footer">
                 <i class="fa-solid fa-location-dot"></i>
                 giza egypt
               </div>
